2009-05-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/03_lpatom_parse.txt: added some more tests.

	Move tests for lpversion before lpatom:
	* test/02_lpatom_parse.c: renamed to 03_lpatom_parse.c.
	* test/02_lpatom_parse.txt: renamed to 03_lpatom_parse.txt.
	* test/03_lpxpak.c: renamed to 04_lpxpak.c.
	* test/03_lpxpak.tbz2: renamed to 04_lpxpak.tbz2.
	* test/04_lparchives.c: renamed to 05_lparchives.c.
	* test/04_lparchives.tbz2: renamed to 05_lparchives.tbz2.
	* test/04_lparchives.txt: renamed to 05_lparchives.txt.
	* test/05_lpversion_parse.c: renamed to 02_lpversion_parse.c.
	* test/05_lpversion_parse.txt: renamed to 02_lpversion_parse.txt.
	* test/Makefile.am: updated.
	* test/05_lparchives.c: updated.
	* test/04_lpxpak.c: updated.
	* test/03_lpatom_parse.c: updated.
	* test/02_lpversion_parse.c: updated.

	Updated tests for lpatom:
	* test/02_lpatom_parse.txt: updated.
	* test/02_lpatom_parse.c: updated.

	Rewritten lpatom with support for lpversion:
	* include/atom.h: updated.
	* src/liblpversion.c: rewritten.

	* include/version.h (lpversion_init): corrected documentation.

	Replaced latex like formatting codes with jdoc like formatting codes:
	* src/liblpxpak.c: updated.
	* include/xpak.h: updated.
	* include/util.h: updated.
	* include/archives.h: updated.

2009-04-26  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added tests for lpversion_parse:
	* test/Makefile.am: added 05_lpversion_parse.
	* test/05_lpversion_parse.txt: added.
	* test/05_lpversion_parse.c (main): added.

	Added lpversion:
	* src/Makefile.am (libportage_la_SOURCES): added liblpversion.c
	* include/Makefile.am (header_HEADERS): added version.h.
	* src/liblpversion.c: added.
	* include/version.h: added.

2009-04-25  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/valgrind-wrapper: simplified and cleaned up.

2009-04-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	Fixed several lint warnings:
	* src/liblpatom.c: fixed.
	* src/liblpxpak.c: fixed.